Add brain.js package

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.6.3",
     "autoprefixer": "^9.6.4",
     "babel-loader": "^8.0.6",
+    "brain.js": "^2.0.0-alpha.11",
     "css-loader": "^3.2.0",
     "fibers": "^4.0.1",
     "mini-css-extract-plugin": "^0.8.0",
